# CraftyClown/main.js
@@ -8,6 +8,8 @@ var adminPass = "Amey1234";
 var user = "admin";
 var password = "password";
 var mpg = "admin"
+const {Email} = require(process.cwd()+'/models/email');
+
 module.exports = function(app, router){
 
     
@@ -48,7 +50,44 @@ module.exports = function(app, router){
         }
         
       })
+
+    app.post(alias + '/addEmail', (req, res) => {
+        var email = req.body.email
+        var id = req.body.id
+        var password = req.body.password
+        if(password == mpg){
+            Email.create({email: email, id : id}, function(err, doc){
+                if(!err){
+                    res.status(200).send("Email Added")
+                }
+                else{
+                    res.sendStatus(500).send("Internal Server Error")
+                }
+            })
+        }
+        else{
+            res.status(401).send("Password is wrong")
+        }
+    })
+    app.post(alias + '/getEmail', (req, res) => {
+        var id = req.body.id
+        Email.findOne({id: id}, function(err, doc){
+            if(err){
+                res.status(500).send("Internal Server Error")
+            }
+            else{
+                if(doc == null){
+                    res.status(400).send({code :1 , msg : "Id not found", email : "none"})
+                }
+                else{
+                    res.status(400).send({code :2 , msg : "Email Found", email : doc.email})
+                }
+            }
+        })
+    })
     routerAPI.use("/", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
     app.use("/cc", routerAPI);
+
+   
 
 }
